--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -75,7 +75,8 @@ steps:
           let "callIndex++"
         done        
         VulnerableMethod[calls]=$calls[@]
-        echo "Calls: ${calls[@]}"
+        firstCall=calls[0]
+        echo "Call 0: ${firstCall[@]}"
         vulnerableMethods[methodIndex]=$VulnerableMethod[@]
         let "methodIndex++"
       done
