--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -45,7 +45,7 @@ steps:
       getWorkItemApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/wiql?api-version=6.1-preview.2"
       Authentication="anything:$API_CREDENTIALS"
       
-      declare -a vulnerableMethods
+      declare -a VulnerableMethods
       methodIndex=0
       for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON}" | jq -r '. | @base64'); do        
         vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
@@ -54,7 +54,7 @@ steps:
         ref=$( tr -d '"' <<< $ref )
         
         declare -A VulnerableMethod
-        VulnerableMethod[reference]=$ref 
+        VulnerableMethod[reference]=$ref
         
         declare -a calls
         callIndex=0
@@ -78,11 +78,11 @@ steps:
         done      
         VulnerableMethod[calls]=${calls[@]}
 
-        vulnerableMethods[$methodIndex]=${VulnerableMethod[@]}
+        VulnerableMethods[$methodIndex]=${VulnerableMethod[@]}
         let "methodIndex++"
       done
-      echo "With @: ${vulnerableMethods[@]}"
-      echo "With 0: "
+      echo "Content with @: ${vulnerableMethods[@]}"
+      echo "Key with @: ${!vulnerableMethods[@]}"
       first=${vulnerableMethods[0]}
       echo First ref: ${first[reference]}
       
