--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -54,7 +54,7 @@ steps:
         ref=$( tr -d '"' <<< $ref )
         
         declare -A VulnerableMethod
-        VulnerableMethod[reference]=$ref
+        VulnerableMethod[reference]=$ref 
         
         declare -a calls
         callIndex=0
@@ -77,15 +77,13 @@ steps:
           let "callIndex++"
         done      
         VulnerableMethod[calls]=${calls[@]}
-
-        VulnerableMethods[$methodIndex]=${VulnerableMethod[@]}
+        vulnerableMethods[$methodIndex]=${VulnerableMethod[@]}
         let "methodIndex++"
       done
-      echo "${!vulnerableMethods[@]}"
-      echo "${vulnerableMethods[@]}"
+      echo "With @: ${vulnerableMethods[@]}"
+      echo "With !@: ${!vulnerableMethods[@]}"
       first=${vulnerableMethods[0]}
-      echo ${first[@]}
-      echo ${first[reference]}
+      echo First ref: ${first[reference]}
       
       for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
