--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -90,7 +90,11 @@ steps:
       echo "With @: ${vulnerableMethods[@]}"
       first=${vulnerableMethods[0]}
       echo "First With @: ${first[@]}"
-      echo First ref: ${first[$referenceIndex]}
+      echo "First ref @: ${first[$referenceIndex]}"
+      first=${vulnerableMethods[1]}
+      echo "Second With @: ${first[@]}"
+      echo "Second ref @: ${first[$referenceIndex]}"
+      
       
       for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
