--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -44,13 +44,6 @@ steps:
       createApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
       getWorkItemApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/wiql?api-version=6.1-preview.2"
       Authentication="anything:$API_CREDENTIALS"
-      referenceIndex=0
-      callsIndex=1
-      
-      calledClassIndex=0
-      calledMethodIndex=1
-      methodDescriptorIndex=2
-      callChainIndex=3
       
       declare -a VulnerableMethods
       methodIndex=0
@@ -61,7 +54,7 @@ steps:
         ref=$( tr -d '"' <<< $ref )
         
         declare -A vulnerableMethod
-        vulnerableMethod[$referenceIndex]=$ref        
+        vulnerableMethod[reference]=$ref        
         
         declare -a calls
         callIndex=0
@@ -73,28 +66,30 @@ steps:
           callChain="THIS IS A CALL CHAIN!"
                     
           declare -A call
-          call[$calledClassIndex]=$calledClass 
-          call[$calledMethodIndex]=$calledMethod 
-          call[$methodDescriptorIndex]=$methodDescriptor 
-          call[$callChainIndex]=$callChain
-          calls[$callIndex]=${call[@]}
+          call[calledClass]=$calledClass 
+          call[calledMethod]=$calledMethod 
+          call[methodDescriptor]=$methodDescriptor 
+          call[callChain]=$callChain
+          
+          assigner=$(declare -p call)
+          calls[$callIndex]=${assigner}
+          
           echo Calls: "${calls[@]}"
           currentCall="${calls[$callIndex]}"
           echo added call: "${currentCall[@]}"
+          echo added call keys: "${!currentCall[@]}"
           let "callIndex++"
         done      
-        vulnerableMethod[$callsIndex]=${calls[@]}
-        vulnerableMethods[$methodIndex]=${vulnerableMethod[@]}
+        assigner=$(declare -p calls)
+        vulnerableMethod[calls]=${assigner}
+        
+        assigner=$(declare -p vulnerableMethod)
+        vulnerableMethods[$methodIndex]=${assigner}
+        
         let "methodIndex++"
       done
       echo "With @: ${vulnerableMethods[@]}"
-      first=${vulnerableMethods[0]}
-      echo "First With @: ${first[@]}"
-      echo "First ref @: ${first[$referenceIndex]}"
-      first=${vulnerableMethods[1]}
-      echo "Second With @: ${first[@]}"
-      echo "Second ref @: ${first[$referenceIndex]}"
-      
+      echo "With !@: ${!vulnerableMethods[@]}"
       
       for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
