--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -62,11 +62,11 @@ steps:
           methodDescriptor=$( jq -r  '.method.descriptor' <<< "${callAsJson}" ) 
           callChain=THIS IS A CALL CHAIN: $calledClass.$calledMethod'('$methodDescriptor')'
 
-          currentCall="${calls[$callIndex]}"
+          calls[$callIndex]=callChain
           let "callIndex++"
         done      
         
-        vulnerableMethods[$methodIndex]=$ref$"\t"$calls[@]
+        vulnerableMethods[$methodIndex]=$ref$    $calls[@]
         
         let "methodIndex++"
       done
