--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -60,17 +60,19 @@ steps:
           calledClass=$( jq -r  '.method.className' <<< "${callAsJson}" )
           calledMethod=$( jq -r  '.method.methodName' <<< "${callAsJson}" ) 
           methodDescriptor=$( jq -r  '.method.descriptor' <<< "${callAsJson}" ) 
-          callChain=THIS IS A CALL CHAIN: $calledClass.$calledMethod'('$methodDescriptor')'
+          callChain="THIS IS A CALL CHAIN: "$calledClass.$calledMethod'('$methodDescriptor')'
 
+          echo $callChain
           calls[$callIndex]=callChain
+          echo "${calls[$callIndex]}"
           let "callIndex++"
         done      
         
-        vulnerableMethods[$methodIndex]=$ref$    $calls[@]
+        vulnerableMethods[$methodIndex]="$ref$    $calls[@]"
         
         let "methodIndex++"
       done
-      echo "With @: ${vulnerableMethods[@]}"
+      echo With @: "${vulnerableMethods[@]}"
       
       for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
