--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -97,7 +97,7 @@ steps:
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" )         
         
         if [[ $cve == "null" ]]; then 
-          cveContent="none"
+          cveContent="none (premium data)"
         else
           cveWithoutQuotes=$( tr -d '"' <<< $cve ) 
           cveLink="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-$cveWithoutQuotes"
