--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -70,14 +70,14 @@ steps:
           callNumber=1
           for callChainLinklistEncoded in $(echo "${callAsJson}" | jq -r '.callChains[] | @base64'); do
             callChainLinkListAsJson=$(echo "$callChainLinklistEncoded" | base64 --decode)
-            callChain=$callChain"</br><h5>${{ parameters.Call_Name }} "$callNumber":</h5><ul>"
+            callChain=$callChain"</br><h5>${{ parameters.Call_Name }} "$callNumber":</h5><table>"
             for callChainLinkEncoded in $(echo "${callChainLinkListAsJson}" | jq -r '.[] | @base64'); do
               callChainLinkAsJson=$(echo "$callChainLinkEncoded" | base64 --decode)
               callee=$( jq -r  '.callee.className' <<< "${callChainLinkAsJson}" ).$( jq -r  '.callee.methodName' <<< "${callChainLinkAsJson}" )$( jq -r  '.callee.descriptor' <<< "${callChainLinkAsJson}" )
               caller=$( jq -r  '.caller.className' <<< "${callChainLinkAsJson}" ).$( jq -r  '.caller.methodName' <<< "${callChainLinkAsJson}" )$( jq -r  '.caller.descriptor' <<< "${callChainLinkAsJson}" )            
-              callChain=$callChain"<li><h6>"$callee"</h6> ${{ parameters.Called_From_Name }} <h6>"$caller"</h6> ${{ parameters.At_Line_Name }} "$( jq -r  '.lineNumber' <<< "${callChainLinkAsJson}" )"</li>"
+              callChain=$callChain"<tr><td>"$callee"</td> <td>${{ parameters.Called_From_Name }}</td> <td>"$caller"</td> <td>${{ parameters.At_Line_Name }} "$( jq -r  '.lineNumber' <<< "${callChainLinkAsJson}" )"</td></tr>"
             done
-            callChain=$callChain"</ul>"
+            callChain=$callChain"</table>"
             let "callNumber++"
           done
 
