--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -75,7 +75,7 @@ steps:
               callChainLinkAsJson=$(echo "$callChainLinkEncoded" | base64 --decode)
               callee=$( jq -r  '.callee.className' <<< "${callChainLinkAsJson}" ).$( jq -r  '.callee.methodName' <<< "${callChainLinkAsJson}" )$( jq -r  '.callee.descriptor' <<< "${callChainLinkAsJson}" )
               caller=$( jq -r  '.caller.className' <<< "${callChainLinkAsJson}" ).$( jq -r  '.caller.methodName' <<< "${callChainLinkAsJson}" )$( jq -r  '.caller.descriptor' <<< "${callChainLinkAsJson}" )            
-              callChain=$callChain"<tr><td>"$callee"</td> <td>${{ parameters.Called_From_Name }}</td> <td>"$caller"</td> <td>${{ parameters.At_Line_Name }} "$( jq -r  '.lineNumber' <<< "${callChainLinkAsJson}" )"</td></tr>"
+              callChain=$callChain"<tr><td></td><td>"$callee"</td></tr> <tr><td>${{ parameters.Called_From_Name }}</td> <td>"$caller"</td></tr> <tr><td>${{ parameters.At_Line_Name }} "$( jq -r  '.lineNumber' <<< "${callChainLinkAsJson}" )"</td></tr>"
             done
             callChain=$callChain"</table>"
             let "callNumber++"
